AIOBI-23 Fixes package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "dennis00/denpal-distro",
+    "name": "amazeelabs/algm_drupal8_baseimage",
     "description": "Project template for Drupal 8 with default modules",
     "type": "project",
     "license": "GPL-2.0+",
