AIOBI-23 Gets credentials using the withCredentials scope

--- a/Dockerfile.cli
+++ b/Dockerfile.cli
@@ -1,9 +1,6 @@
 FROM amazeeio/php:7.2-cli-drupal
 
-# We don't need the composer.lock file
-# COPY composer.json composer.lock /app/
-
-COPY composer.json /app/
+COPY composer.json composer.lock /app/
 COPY scripts /app/scripts
 RUN composer install --no-dev
 COPY . /app
