--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,7 @@
         "cweagans/composer-patches": "~1.0",
         "drupal/core": "~8.0",
         "drush/drush": "~8.0",
-        "drupal/console": "~1.0",
-        "drupal/config_installer": "1.x-dev",
+        "drupal/config_installer": "~1.0",
         "drupal/redis": "^1.0",
         "drupal/poll": "1.2",
         "drupal/search_api": "^1.6",
