Adds composer merge plugin

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "drupal/search_api": "^1.6",
         "drupal/search_api_solr": "^1.2",
         "drupal/varnish_purge": "^1.10",
-        "drupal/purge": "^3.0"
+        "drupal/purge": "^3.0",
+        "wikimedia/composer-merge-plugin": "^1.4"
     },
     "require-dev": {
         "behat/mink": "~1.7",
@@ -64,6 +65,21 @@
         ]
     },
     "extra": {
+        "merge-plugin": {
+            "include": [
+                "composer.dist.json",
+                "composer.local.json",
+                "extensions/*/composer.json",
+                "depimages/*/composer.json"
+            ],
+            "recurse": false,
+            "replace": false,
+            "ignore-duplicates": false,
+            "merge-dev": false,
+            "merge-extra": false,
+            "merge-extra-deep": false,
+            "merge-scripts": false
+        },
         "installer-paths": {
             "web/core": ["type:drupal-core"],
             "web/libraries/{$name}": ["type:drupal-library"],
@@ -80,4 +96,3 @@
         }
     }
 }
-
