Changes to image_build and tests

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 # Ignore Drupal's file directory
 /web/sites/*/files/
 
-# Ingore files that are only for the current local environment
+# Ignore files that are only for the current local environment
 web/sites/*/settings.local.php
 web/sites/*/services.local.yml
 
